// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Spacing Component correctly 1`] = `
<div
  className="sc-bxivhb ckKdkO"
  scale={undefined}
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 2`] = `
<div
  className="sc-bxivhb ehSxoR"
  scale="xl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 3`] = `
<div
  className="sc-bxivhb lcqWmr"
  scale={undefined}
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 4`] = `
<div
  className="sc-bxivhb hJcdNe"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 5`] = `
<div
  className="sc-bxivhb LbpqH"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 6`] = `
<div
  className="sc-bxivhb hadEva"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 7`] = `
<div
  className="sc-bxivhb fzXpAn"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 8`] = `
<div
  className="sc-bxivhb PAfpz"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 9`] = `
<div
  className="sc-bxivhb gNIxJR"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 10`] = `
<div
  className="sc-bxivhb gJfcWI"
  scale="xxl"
>
  Spacing
</div>
`;
